# web3

./: .dockerignore  .pre-commit-config.yaml  Makefile  bandit.yaml  noxfile.py  pylintrc  pyproject.toml
alembic/: env.py
app/: main.py  router.py  settings.py
app/controllers/: ready.py
app/exceptions/: __init__.py
app/utils/: __init__.py  postgres_client.py
app/views/: __init__.py  error.py  request_mixin.py
docker/: .env.example  Dockerfile  docker-compose.yaml
scripts/: wait-for.sh
