[tool.poetry]
name = "web3"
version = "0.1.0"
description = ""
authors = ["lvvittor <lvvittor@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = ">=0.68.0"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = { extras = ["standard"], version = "^0.16.0" }
fastapi-utils = "^0.2.1"
SQLAlchemy = "^1.3.24"
alembic = "^1.4.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pre-commit-hooks = "^4.0.1"
freezegun = "^1.1.0"
isort = "^5.8.0"
mypy = ">=0.900"
flake8 = "^3.7.8"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.4.0"
pylint = "^2.6.0"
pdbpp = "0.10.2"
nox = "^2021.10.1"
black = "^22.3.0"
interrogate = "^1.5.0"
ERAlchemy = { version = "^1.2.10", optional = true }
myst-parser = { version = "^0.18.0", optional = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
combine_as_imports = true
force_sort_within_sections = true
known_first_party = "lisa"
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
filterwarnings = [
  "error:Sparse:FutureWarning",
  "error:The SparseArray:FutureWarning",
]
addopts = "--cov=app"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 80
exclude = ["setup.py", "docs", "alembic", "tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
